<resources>
    <string name="app_name">BrainBeats</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- App titles -->
    <string name="app_title">Brain Beats</string>
    <string name="dashboard_title">Dashboard</string>

    <!-- Menu items-->
    <string name="action_settings">Settings</string>
    <string name="action_login">Login to Sound Cloud</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_share">Share</string>

    <!-- Navigation drawer items -->
    <string name="nav_item_label_browse">Browse</string>
    <string name="nav_item_label_library">Library</string>
    <string name="nav_item_label_mixer">Mixer</string>
    <string name="nav_item_label_social">Social</string>
    <string name="nav_item_label_analytics">Analytics</string>
    <string name="nav_item_label_settings">Settings</string>
    <string name="nav_item_label_info">Info</string>
    <string name="navview_header_default_image_content_description">Navigation drawer default image</string>
    <string name="nav_drawer_open_text">Nav Drawer Open</string>
    <string name="nav_drawer_closed_text">Nav Drawer Closed</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Dialog Strings -->
    <string name="new_beat_title">New Mix</string>
    <string-array name="new_beat_options">
        <item name="create_blank_beat">Create a new mix.</item>
        <item name="create_mix_from_existing">Create a new mix from an existing mix.</item>
    </string-array>

    <string name="create_beat_from_title">Create A New Mix From</string>
    <string-array name="new_from_existing_beat_options">
        <item name="start_mixing_by_search">Start mixing by search.</item>
        <item name="start_mixing_from_popular_beat">Start mixing from a popular mix.</item>
        <item name="start_mixing_from_library">Start mixing from library.</item>
    </string-array>

    <string name="add_beat_to_user_list">Add Beat To Collection</string>
    <string-array name="add_beat_to_user_list_options">
        <item name="add_to_user_library">Library</item>
        <item name="add_to_user_favorites">Favorites</item>
        <item name="add_to_user_playlist">Playlist</item>
    </string-array>

    <string name="add_sound_item_to_current_beat">Add New Beat Sound</string>

    <!-- Tab Strings -->
    <string-array name="library_tab_titles">
        <item name="song_list">Songs</item>
        <item name="play_list">PlayList</item>
        <item name="favorite_list">Favorites</item>
    </string-array>

    <string name="default_mix_album_art_url">https:\default</string>
    <string-array name="default_mix_items">
        <item name="alpha_option">Alpha</item>
        <item name="beta_option">Beta</item>
        <item name="gamma_option">Gamma</item>
        <item name="theta_option">Theta</item>
        <item name="voice_option">Voice</item>
        <item name="guitar_option">Guitar</item>
        <item name="piano_option">Piano</item>
        <item name="drums_option">Drums</item>
    </string-array>

    <string name="beat_levels">Beat Levels</string>
    <string name="album_cover_art_image_description">Album cover art</string>

    <!--Error strings -->
    <string name="unknown_volley_error">Unknown error.</string>

    <string name="mixes">Mixes</string>
    <string name="no_mixes_found_text">Add a mix to get started.</string>
    <string name="default_mix_title">New Mix</string>
    <string name="suggested_tracks">Suggested Tracks</string>

    <string-array name="beat_categories">
        <item name="focus">Focus</item>
        <item name="relaxation">Relaxation</item>
        <item name="meditation">Meditation</item>
        <item name="stress">Stress</item>
        <item name="creativity">Creativity</item>
        <item name="study">Study</item>
        <item name="sleep">Sleep</item>
    </string-array>

    <string-array name="genres">
        <item name="Prompt">Select a music genre</item>
        <item name="Dubstep">Dubstep</item>
        <item name="Electronic">Electronic</item>
        <item name="Ambient">Ambient</item>
        <item name="Classical">Classical</item>
        <item name="Country">Country</item>
        <item name="Dance_EDM">Dance &amp; EDM</item>
        <item name="Deep_House">Deep House</item>
        <item name="Disco">Disco</item>
        <item name="Drum_Bass">Drum &amp; Bass</item>
        <item name="Dubstep">Dubstep</item>
        <item name="Electronic">Electronic</item>
        <item name="Hiphop_Rap">Hip-hop &amp; Rap</item>
        <item name="House">House</item>
        <item name="Indie">Indie</item>
        <item name="Jazz_Blues">Jazz &amp; Blues</item>
        <item name="Latin">Latin</item>
        <item name="Metal">Metal</item>
        <item name="Piano">Piano</item>
        <item name="Pop">Pop</item>
        <item name="Rock">Rock</item>
        <item name="Techno">Techno</item>
        <item name="Trance">Trance</item>
        <item name="Trap">Trap</item>
        <item name="Triphop">Triphop</item>
    </string-array>

    <string name="loading_message">Loading</string>
    <string name="signing_in__message">Loading</string>
    <string name="song_added_to_favorites_snack_message">Song added to Favorites.</string>
    <string name="song_added_to_library_snack_message">Song added to Library.</string>
    <string name="song_added_to_mixer_snack_message">Song added to Mixer.</string>
    <string name="artist_added_to_following">You are now following this artist.</string>
    <string name="artist_removed_from_following">You have stopped following this artist.</string>
    <string name="mix_item_exists_snack_message" formatted="false">This mix already contains %s</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="connect_to_network_message">Unable to connect to network</string>
    <string name="go_to_settings_message">Go to settings</string>
    <string name="enable_wifi_in_settings_message">Please connect to a network to use this feature.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="error_playing_song_message">There was a problem playing this song.</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_up">Sign Up</string>

    <!-- Item updated messages -->
    <string name="item_updated_mix">This mix has been updated.</string>

    <!-- Error message strings -->
    <string name="error_favoriting_message">There was a problem adding this mix to favorites.</string>
    <string name="error_this_mix_is_already_a_favorite">This mix is already a favorite.</string>
    <string name="error_this_mix_is_already_in_library">This mix is already in your library.</string>
    <string name="error_this_mix_is_in_the_mixer">This mix is already in the mixer.</string>
    <string name="error_rating_message">There was a problem rating this mix.</string>
    <string name="error_unknown_message">An unexpected error occurred.</string>
    <string name="error_invalid_email">This email address is invalid.</string>
    <string name="error_invalid_password">This password is to short.</string>
    <string name="error_confirm_password_does_not_match">Confirm password does not match password.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_no_results_found_error_message">No Results Found</string>
    <string name="error_processing_request">There was an issue with this request please try again later</string>


    <!-- Content descriptions -->
    <string name="content_description_image_placeholder">Place holder image</string>
    <string name="content_description_shuffle_button">Shuffle button</string>
    <string name="content_description_play_prev_button">Play previous button</string>
    <string name="content_description_play_button">Play button</string>
    <string name="content_description_play_next_button">Play next button</string>
    <string name="content_description_repeat_button">Repeat button</string>
    <string name="content_description_increase_beat_amount_icon">Increase beat amount icon</string>
    <string name="content_description_decrease_beat_amount_icon">Increase Beat Amount</string>

    <!-- Settings -->
    <string name="preference_sync_with_sound_cloud_text">Sync with Sound Cloud</string>
    <string name="preference_download_over_wifi">Download Only Over Wi-Fi</string>

    <!-- Login -->
    <string name="sound_cloud_login_message">Log in to sound cloud.</string>
    <string name="login_to_sound_cloud_title">Log in to sound cloud.</string>
    <string name="login_failed_error_message">Login Failed</string>
    <string name="log_in_using_sound_cloud">Log in using Sound Cloud</string>

    <!-- Social -->
    <string name="friend_request_accepted">Friend Request Accepted</string>


    <string name="please_sign_in_to_sound_cloud_dialog">Please sign in to sound cloud before using this feature.</string>
    <string name="search_hint">Search</string>
    <string name="no_songs_placeholder">Add a new song to your libray.</string>
    <string name="no_current_songs_message">No songs found.</string>
    <string name="issue_creating_account_error_message">There was an issue creating this account.</string>
    <string name="downvote_track">Got it we wont play this mix again.</string>
    <string name="upvote_track">Great we will play more mixes like this one in the future.</string>
    <string name="no_search_results">Please try a different search.</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="new_playlist_added">Your new playlist has been added.</string>
    <string name="song_added_to_existing_playlist">Song added to existing playlist.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_this_track">Share this track</string>
    <string name="temperary_file_name">temp</string>
    <string name="start_recording_text">Start Recording</string>
    <string name="add_playlist_to_lib">Add a playlist to your library</string>
    <string name="add_fav_to_lib">Add a favorite to your library</string>
    <string name="title_activity_music_analytics">MusicAnalyticsActivity</string>

</resources>
